# Linux-Exercise

./: CMakeCache.txt  CMakeLists.txt  Stocks-app.vcxproj  Stocks-app.vcxproj.filters  run.sh
cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake  get_stocks_data.sh
linuxEx2/: stockData.h  stocks.cpp
src/: csvExport.cpp  stockData.cpp
